# qmk_firmware

./: common_features.mk  message.mk
docs/: feature_rgb_matrix.md
keyboards/coseyfannitutti/discipline/keymaps/prilik/: keymap.c  rules.mk
keyboards/massdrop/alt/: led_programs.c  led_visualize.html
keyboards/massdrop/alt/keymaps/prilik/: keymap.c  rgb_matrix_custom.c  rgb_matrix_user.c  rgb_matrix_user.h  rgb_matrix_user.inc  rules.mk
keyboards/massdrop/alt/keymaps/reywood/: rgb_matrix_user.c
keyboards/planck/ez/: ez.c
keyboards/planck/keymaps/prilik/: config.h  keymap.c  rgb_matrix_user.inc  rules.mk
keyboards/planck/keymaps/prilik/rust/: Cargo.toml
keyboards/planck/keymaps/prilik/rust/.cargo/: config
keyboards/planck/keymaps/prilik/rust/qmk-sys/: build.rs  wrapper.h
keyboards/planck/keymaps/prilik/rust/qmk-sys/src/: bindgen.rs  lib.rs
keyboards/planck/keymaps/prilik/rust/src/: keymap.rs  lib.rs  zork.rs
lib/rust/qmk-sys/: Cargo.toml
lib/rust/qmk-sys/src/: lib.rs  malloc.rs
quantum/: rgb_matrix.c  rgb_matrix.h  rgb_matrix_custom_effects.c
quantum/rgb_matrix_animations/: typing_heatmap_anim.h
tmk_core/: chibios.mk  rules.mk
tmk_core/common/arm_atsam/: eeprom.c
tmk_core/protocol/arm_atsam/: led_matrix.c
