[package]
name = "rust"
version = "0.1.0"
authors = ["Daniel Prilik <danielprilik@gmail.com>"]
edition = "2018"

[workspace]
members = ["qmk-sys"]

[dependencies]
qmk-sys = { path = "./qmk-sys" }

[profile.release]
codegen-units = 1 # better optimizations
debug = false
debug-assertions = false
incremental = false
lto = true # better optimizations
opt-level = 's'
overflow-checks = false
panic = "abort"
rpath = false

[lib]
crate-type = ["staticlib"]
test = false
bench = false
